Sincronizando el proyecto.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,7 @@
+file.reference.Taller-Usabilidad-public_html=public_html
+file.reference.Taller-Usabilidad-test=test
 file.reference.TallerUsabilidad-public_html=public_html
 file.reference.TallerUsabilidad-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.TallerUsabilidad-public_html}
-test.folder=${file.reference.TallerUsabilidad-test}
+site.root.folder=${file.reference.Taller-Usabilidad-public_html}
+test.folder=${file.reference.Taller-Usabilidad-test}
